# G-coin

./: .env  .gitignore  Cargo.toml  README.md
contracts/token/: USDG.sol
migrations/2019-10-10-070646_transactions/: down.sql  up.sql
paper/: Paper_v.1.0.ps  Paper_v.1.0.tex  ref.bib
src/: lib.rs  models.rs  schema.rs
