[package]
name = "usdg"
version = "0.1.0"
authors = ["pavelkrolevets <pavelkrolevets@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
web3 = { git = "https://github.com/tomusdrw/rust-web3" }
tokio-core = "0.1.17"
rustc-hex = "2.0.1"
env_logger = "0.7.0"
serde_json = "1.0"